--- a/website/public/manifest.json
+++ b/website/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "CLUAR",
-  "name": "CLUAR - CMS for ReactJS and Website Backoffice",
+  "short_name": "Netuno Platform",
+  "name": "Netuno Platform - Open Source and Low-Code",
   "icons": [
     {
       "src": "images/favicon.ico",
