--- a/website/public/manifest.json
+++ b/website/public/manifest.json
@@ -16,15 +16,10 @@
       "src": "images/favicon-512.png",
       "type": "image/png",
       "sizes": "512x512"
-    },
-    {
-      "src": "images/favicon-1024.png",
-      "type": "image/png",
-      "sizes": "1024x1024"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff"
+  "theme_color": "#000000",
+  "background_color": "#000000"
 }
